[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Level/Door.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 50 )

[node name="Door" type="Node2D"]
script = ExtResource( 1 )

[node name="DoorArea2D" type="Area2D" parent="."]
collision_layer = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorArea2D"]
shape = SubResource( 1 )

[connection signal="body_entered" from="DoorArea2D" to="." method="_on_DoorArea2D_body_entered"]
[connection signal="body_exited" from="DoorArea2D" to="." method="_on_DoorArea2D_body_exited"]
